<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".ResultFragment">

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle_icon"
        android:backgroundTint="@color/dark_blue"
        android:gravity="center"
        android:text="@string/numberTextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="90sp"
        app:layout_constraintBottom_toTopOf="@+id/resultTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="30dp"
        android:gravity="center"
        android:text="@string/win"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableTopCompat="@drawable/true_icon"
        app:layout_constraintBottom_toTopOf="@+id/replayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberTextView" />

    <ImageButton
        android:id="@+id/replayButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/replay_icon"
        android:contentDescription="@string/replay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
        tools:src="@drawable/replay_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>